# HaskBankell

./: CHANGELOG.md  README.md  projeto-hsl.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/35f4d000/: cabal_macros.h
.stack-work/ghci/6628ac5b/: cabal_macros.h
.stack-work/ghci/722d77ab/: cabal_macros.h
.stack-work/ghci/741295db/: cabal_macros.h
.stack-work/ghci/9cd0b155/: cabal_macros.h
.stack-work/ghci/f0ec2f6d/: cabal_macros.h
.stack-work/install/x86_64-linux-tinfo6/07511837364506c95cdd3e1261bf7eb479860136c893d3361906690b05e6c660/9.6.6/pkgdb/: package.cache  projeto-hsl-0.1.0.0-1HTCbgkPako7PcFoSBWIR6.conf
.stack-work/install/x86_64-linux/cce98880a57214800d17e0ee4df832f570cc6b09fa46ac01b3f9c230bbed2e98/9.6.6/pkgdb/: package.cache  projeto-hsl-0.1.0.0-1HTCbgkPako7PcFoSBWIR6.conf
db/: User.json
src/: Main.hi  Main.hs  Usuario.hi  Usuario.hs
test/: Testes.hs
