cabal-version:       2.2

name:                projeto-hsl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/projeto-hsl#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable projeto-hsl
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, aeson, bytestring, directory, HUnit
  extensions:          DeriveGeneric
  other-modules:       Usuario
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wmissing-home-modules

test-suite my-tests
  type: exitcode-stdio-1.0
  main-is: Testes.hs
  hs-source-dirs: test, src  
  other-modules: Usuario 
  build-depends:
    base >= 4.7 && < 5,
    HUnit
  default-language: Haskell2010




